--- a/src/components/cardComponent/card.css
+++ b/src/components/cardComponent/card.css
@@ -4,10 +4,8 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
-    position: relative;
     margin-bottom: 30px;
-    /* border: 2px solid grey;
-    border-radius:8px; */
+    
 }
 
 .image {
@@ -28,27 +26,23 @@
 
   .collection-footer {
     width: 100%;
-    /* height: 5%; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     font-size: 18px;
     flex: 1;
 
-    /* margin-bottom: 30px; */
 }
 
 .name {
     width: 90%;
     margin-bottom: 15px;
-    color: grey
-;    font-size:16px;
+    color: grey; 
+    font-size:16px;
     font-weight: bold;
   }
 
   .price {
-     
     font-weight: bold;
-
   }
 
